<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/pdf_out"
        android:orderInCategory="100"
        android:title="@string/menuItem1"
        app:showAsAction="never" />
    <item
        android:id="@+id/title_share"
        android:orderInCategory="100"
        android:title="@string/menuItem2"
        app:showAsAction="never" />
    <item
        android:id="@+id/remove_article"
        android:orderInCategory="100"
        android:title="@string/menuItem4"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_update"
        android:orderInCategory="100"
        android:title="@string/menuItem5"
        app:showAsAction="never" />
</menu>