<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterForSecVerifyActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="23dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="9dp"
            android:paddingBottom="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="107dp"
            android:text="@string/register"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            android:layout_marginStart="52dp"
            android:layout_marginTop="48dp"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:text="@string/default_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_user_name"
            app:layout_constraintStart_toStartOf="@id/tv_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            android:layout_marginTop="12dp"
            android:hint="@string/input_user_name_hint"
            android:background="@null"
            android:inputType="text"
            android:layout_marginEnd="52dp"
            android:gravity="start"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/view_1"
            app:layout_constraintStart_toStartOf="@id/et_user_name"
            app:layout_constraintEnd_toEndOf="@id/et_user_name"
            app:layout_constraintTop_toBottomOf="@id/et_user_name"
            android:background="@color/divider"
            android:layout_marginTop="5dp"
            android:layout_width="0dp"
            android:layout_height="0.5dp" />

        <TextView
            android:id="@+id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:text="@string/default_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_password"
            app:layout_constraintStart_toStartOf="@id/tv_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:layout_marginTop="12dp"
            android:hint="@string/input_password_hint"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_marginEnd="52dp"
            android:gravity="start"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/view_2"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:background="@color/divider"
            android:layout_marginTop="5dp"
            android:layout_width="0dp"
            android:layout_height="0.5dp" />

        <TextView
            android:id="@+id/tv_desc"
            app:layout_constraintStart_toStartOf="@id/view_2"
            app:layout_constraintEnd_toEndOf="@id/view_2"
            app:layout_constraintTop_toBottomOf="@id/view_2"
            android:layout_marginTop="14dp"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:text="@string/user_name_pwd_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_submit"
            android:text="@string/submit"
            app:layout_constraintStart_toStartOf="@id/view_2"
            app:layout_constraintEnd_toEndOf="@id/view_2"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/bg_blue_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.ai.bbcpro.ui.widget.LoadingView
            android:id="@+id/loading_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>