<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/word_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:text="@string/dialog_word"
            android:textColor="#282828"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/word_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:textColor="#282828"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/word_trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:textColor="#282828"
            android:textSize="16sp" />

        <View
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E7E7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/word_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="#282828"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#E7E7E7" />

            <TextView
                android:id="@+id/word_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/col_word"
                android:textColor="#282828"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>