<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/line_shadow"
    android:padding="8dp"
    tools:layout_margin="8dp">

    <TextView
        android:id="@+id/text_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00"/>

    <TextView
        android:id="@+id/text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00"/>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/text_current"
        app:layout_constraintLeft_toRightOf="@id/text_current"
        app:layout_constraintRight_toLeftOf="@id/text_total"
        app:layout_constraintTop_toTopOf="@id/text_current">

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            android:progressDrawable="@drawable/headline_audio_seekbar"
            android:thumb="@drawable/ic_thumb1"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="@id/frame_container"
        app:layout_constraintRight_toRightOf="@id/frame_container"
        app:layout_constraintTop_toBottomOf="@id/text_current">

        <TextView
            android:id="@+id/text_merge"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_gravity="start"
            android:background="@drawable/merge_bg"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/merge"
            android:textColor="@color/merge_button_text"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/text_listen"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_gravity="start"
            android:background="@drawable/merge_bg"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/audition"
            android:textColor="@color/merge_button_text"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/image_button_pause"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_gravity="start"
            android:background="@drawable/merge_bg_fill"
            app:srcCompat="@drawable/ic_pause_for_eval"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/text_publish"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_gravity="end"
            android:background="@drawable/merge_bg"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/publish"
            android:textColor="@color/merge_button_text"
            tools:visibility="gone"/>

        <TextView
            android:id="@+id/text_share"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_gravity="end"
            android:background="@drawable/merge_bg"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/shared"
            android:textColor="@color/merge_button_text"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/text_score"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:visibility="gone"
            tools:visibility="visible"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>