<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:elevation="1dp">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@mipmap/icon_back" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/discover_search_word"
            android:textColor="@android:color/white"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e7e6e6"
        android:elevation="1dp"
        android:focusable="false"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/search"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/shape_btn_bg_grey"
            android:text="@string/search_word_do"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/search"
            android:background="@drawable/border"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <EditText
                android:id="@+id/search_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:hint="@string/search_word_hint"
                android:singleLine="true"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/word_clear_button" />
        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/word_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:divider="#dcdcdc"
        android:dividerHeight="1dp"
        android:fastScrollEnabled="true"></ListView>

</LinearLayout>